# SurgicalAI

./: .coveragerc  .env.example  .gitignore  .pre-commit-config.yaml  CHANGES.md  DASHBOARD_UPGRADE.md  DASHBOARD_UPGRADE_COMPLETE.md  Dockerfile  ENHANCED_PIPELINE_SUMMARY.md  FLAP_PLANNING_DELIVERY.md  LICENSE  Makefile  PRODUCTION_READY.md  README.md  README.md.new  README_Advanced.md  README_BUILD.md  REFACTOR_COMPLETE.md  complete_demo.py  demo_advanced_system.py  demo_complete.py  demo_flap_integration.py  pyproject.toml  pytest_output.txt  python_version_check.py  quick_verify.py  requirements-dev.txt  requirements-lock.txt  requirements.txt  settings.yaml  surgicalai.spec  surgicalai_cli.py  test_api.py  test_basic_system.py  test_hardened_system.py  test_roi.py  verify_advanced_system.py  verify_flap_system.py  verify_system.py
.github/workflows/: ci.yml  publish_maven.yml  publish_nuget.yml  release_docker.yml
client/: api.js  api_new.js  app.js  dashboard.css  dashboard.html  index.html  manifest.json  styles.css  styles.css.bak  sw.js  test.html
clients/csharp/: SurgicalAI.Client.csproj
clients/java/: openapi-config.yaml  pom.xml
data/: guidelines.yaml  oncology_rules.yaml
data/anatomy/: landmarks_schema.json  langer_lines.json  vessels.json
data/samples/: face_mock.mtl  manual_landmarks.json  sample_photo.ppm
docs/: IO_SCHEMA.md  PRIVACY.md  ROADMAP.md  flap_rules.md
models/: README.md
samples/: README.md
scripts/: build_win.bat  export_openapi.py  smoke_test_win.bat
server/: __init__.py  ai_fallback.py  ai_openai.py  api_advanced.py  api_simple.py  app.py  docx_export.py  guidelines.py  http_api.py  langer_lines.py  model_infer.py  pipeline.py  rate_limit.py  report.py  report_builder.py  risk_factors.py  routes.py  rules.py  schemas.py  server.py  settings.py  usage.py
server/core/: __init__.py  analysis.py  clinical_knowledge.yaml  llm.py  pdf.py  schemas.py  utils.py
server/llm/: __init__.py  anthropic_client.py  base.py  openai_client.py  prompts.py  router.py
server/templates/: report.css  report.html
src/surgicalai/: __init__.py  __main__.py  ai_openai.py  cli.py  config.py  ui_runner.py
surgical_ai/: __init__.py  cognitive_decision_engine.py  contraindication_detector.py  flap.py  landmarks.py  lesion.py  output.py  pipeline.py  report_generator.py  scan.py  self_audit_checker.py  structural_integrity_validator.py  visualization.py
surgical_ai/facial_analysis/: __init__.py  flap_design_engine.py  landmark_detection.py  (+5 more)
surgicalai/: __init__.py  _pyinstaller_mpl.py  api.py  biomech_validator.py  cli.py  config.py  config.yaml  contraindication_engine.py  demo.py  flap_designer.py  lesion_detection.py  logging_utils.py  mesh_parser.py  report.py  schemas.py  ui.py  utils.py  viz.py
surgicalai-dashboard/: app.js  index.html  styles.css
surgicalai_demo/: __init__.py  __main__.py  cli.py  config.py  data_spine.py  features.py  fusion.py  gradcam.py  guidelines.py  langer_lines.py  multimodel.py  pipeline.py  report.py  retrieval.py  risk_factors.py  rules.py  transforms.py  vlm_observer.py
tests/: conftest.py  test_alignment_and_fusion.py  test_api.py  test_bayes_adjust.py  test_cli.py  test_cli_demo.py  test_closure_choice.py  test_compose_pdf.py  test_consensus_iou.py  test_demo.py  test_enhanced_pipeline.py  test_export_load.py  test_flap_designer.py  test_flap_integration.py  test_flap_planner.py  test_gradcam.py  test_guideline_plan.py  test_guidelines.py  test_infer_basics.py  test_infer_structured.py  test_invalid_image.py  test_io.py  test_mesh_parser.py  test_offline_no_network.py  test_pipeline.py  test_planner_json.py  test_planning.py  test_report_pdf.py  test_synthetic_assets.py  test_training_smoke.py  test_transform_accuracy.py
tools/: self_check.py  smoke_triage.py
(+66 files in other folders)
