[project]
name = "surgicalai"
version = "0.1.0"
description = "AI-powered surgical planning for dermatologic reconstruction"
authors = [
    {name = "Mgrbni", email = "mehdi.gharbi@surgicalai.dev"},
]
dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "scikit-image>=0.20.0",
    "opencv-python>=4.8.0",
    "pillow>=10.0.0",
    "mediapipe>=0.10.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "jinja2>=3.1.0",
    "weasyprint>=59.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
    "tyro>=0.5.0",
    "matplotlib>=3.7.0",
    "shapely>=2.0.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    # Web/API runtime dependencies (added for local server run)
    "fastapi>=0.111.0",
    "uvicorn>=0.30.0",
    "python-multipart>=0.0.9",
    "openai>=1.35.0",
    "anthropic>=0.34.0",
]
requires-python = ">=3.9"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
addopts = ""
testpaths = ["tests"]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "mypy>=1.10.0",
    "ruff>=0.4.0",
    "types-PyYAML",
    "types-requests",
]

[tool.ruff]
select = ["E", "F", "I"]
ignore = []
line-length = 100

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
[tool.setuptools.packages.find]
where = ["src"]
