[project]
name = "surgicalai"
version = "0.1.0"
description = "Minimal deterministic demo for dermatologic reconstruction planning"
authors = [
        {name = "SurgicalAI Authors"},
]
dependencies = [
        "numpy>=1.24.0",
        "pillow>=10.0.0",
        "pydantic>=2.0.0",
        "torch>=2.0.0",
        "torchvision>=0.15.0",
]
requires-python = ">=3.10"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
]

[project.scripts]
surgicalai = "SurgicalAI.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["SurgicalAI"]
exclude = ["src", "server", "client", "surgicalai_demo"]

[tool.hatch.build.targets.sdist]
include = ["surgicalai", "assets", "tests", "README.md", "LICENSE", "Makefile", ".github/workflows/ci.yml", ".pre-commit-config.yaml", "pyproject.toml"]

[tool.pytest.ini_options]
addopts = ""
testpaths = ["tests/smoke"]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "ruff>=0.4.0",
    "black>=24.4.2",
]

[tool.ruff]
select = ["E", "F", "I"]
ignore = []
line-length = 100
